--- a/evolrescue.html
+++ b/evolrescue.html
@@ -31,6 +31,7 @@ function print (message) {
     const messageElement = document.createElement("div");
     messageElement.textContent = message;
     LOG_ELEMENT.appendChild(messageElement);
+    messageElement.scrollIntoView();
 }
 
 /** Print the given message to the history, then wait for user input
