Add links from page to source and back

--- a/evolrescue.html
+++ b/evolrescue.html
@@ -8,6 +8,13 @@
         max-height: 24em;
         overflow-y: scroll;
     }
+
+    footer {
+        position: fixed;
+        bottom: 0;
+        padding: 0.2em;
+        font-size: 0.8em;
+    }
 </style>
 </head>
 <body>
@@ -371,5 +378,8 @@ print("You were able to increase your bird population by " + str(score) + " bird
 
 play();
 </script>
+<footer>
+    <a href="https://github.com/benj2240/evol-rescue">How does this work?</a>
+</footer>
 </body>
 </html>
