Fix a grammar typo in the winter flavor text

--- a/evolrescue.html
+++ b/evolrescue.html
@@ -200,7 +200,7 @@ function drift(wild_dict) {
         print("You lost one " + str(loser) + " bird.")
     }
     else if (loss == "B") {
-        text = ["A harsh winter takes it's toll. Lose 2 birds.", "A drought limits food supply. Lose 2 birds."]
+        text = ["A harsh winter takes its toll. Lose 2 birds.", "A drought limits food supply. Lose 2 birds."]
         B = random.choice(text)
         print(str(B))
         while (t < 2) {
