Treat empty response as zero

--- a/evolrescue.html
+++ b/evolrescue.html
@@ -58,7 +58,7 @@ function input (prompt) {
 }
 
 function int (value) {
-    return parseInt(value);
+    return parseInt(value) || 0;
 }
 
 function str (value) {
